--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.5.2"
   },
-  "description": "- Node v18.17 - NPM - Express - JWT - Prisma - Postgres",
+  "description": "- Node v18.17 - Yarn Package Manager - Express - JWT - Prisma - MongoDB -a",
   "keywords": [],
   "author": ""
 }
