--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "@prisma/client": "^5.5.2",
+    "prisma": "^5.5.2",
     "jsonwebtoken": "^9.0.2"
-  }
+  },
+  "description": "- Node v18.17 - NPM - Express - JWT - Prisma - Postgres",
+  "keywords": [],
+  "author": ""
 }
