--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "prisma": "^5.3.1"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "@prisma/client": "^5.5.2",
-    "prisma": "^5.5.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.5.2"
   },
   "description": "- Node v18.17 - NPM - Express - JWT - Prisma - Postgres",
   "keywords": [],
